# django-storage-supabase

./: README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml
django_storage_supabase/: compress.py  supabase.py
supabase/: compress.py  supabase.py  utils.py
tests/: settings.py  test_supabase.py
