[tool.poetry]
name = "django-storage-supabase"
version = "0.1.0"
description = "Package for using Supabase Storage as a custom storage backend"
authors = ["Joel Lee <joel@joellee.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
supabase = "^0.5.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
